[gd_scene load_steps=2 format=3 uid="uid://5x3xplkua4q0"]

[ext_resource type="Script" path="res://assets/scripts/Chapter_Creation/chapter_creation_logic.gd" id="1_yc8te"]

[node name="Node2D" type="Node2D"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 90.0
offset_bottom = 160.0
script = ExtResource("1_yc8te")
metadata/_edit_use_anchors_ = true

[node name="TextInput" type="TextEdit" parent="UI"]
layout_mode = 0
offset_top = 23.0
offset_right = 543.0
offset_bottom = 394.0
placeholder_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"

[node name="CountersContainer" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_top = 426.0
offset_right = 540.0
offset_bottom = 572.0

[node name="Label_CharacterCounter" type="Label" parent="UI/CountersContainer"]
layout_mode = 2
text = "XZD"

[node name="Label_PageCounter" type="Label" parent="UI/CountersContainer"]
layout_mode = 2
text = "xXDD"

[node name="Label_ChapterStatus" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "XXXXXXXXXX"

[node name="ProgressBar_PageProgress" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 397.0
offset_right = 12.0
offset_bottom = 424.0

[node name="DisplayOutput" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="text_changed" from="UI/TextInput" to="UI" method="_on_text_input_text_changed"]
